--- a/package.json
+++ b/package.json
@@ -24,17 +24,20 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "html-webpack-plugin": "^2.30.1",
-    "postcss-loader": "^2.0.9",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "html-webpack-plugin": "^2.22.0",
+    "node-sass": "^4.7.2",
+    "postcss-loader": "^1.3.3",
     "postcss-scss": "^1.0.2",
+    "postcss-smart-import": "^0.7.6",
     "precss": "^2.0.0",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "vue": "^2.5.9",
     "vue-loader": "^13.5.0",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.9",
-    "webpack": "^3.10.0",
+    "webpack": "^2.3.2",
     "webpack-dev-server": "^2.9.5"
   }
 }
