--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "start": "webpack",
+    "build": "webpack --config ./webpack.config.js --watch",
     "server": "webpack-dev-server --open"
   },
   "repository": {
@@ -22,7 +22,11 @@
     "autoprefixer": "^7.2.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.22.0",
