--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["latest"],
+  "presets": [["env", { modules: false }]],
   "plugins": ["transform-runtime"],
   "comments": false
 }
