--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-latest": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
+    "eslint": "^4.14.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.22.0",
     "node-sass": "^4.7.2",
